# shared-stuff

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .release-please-manifest.json  .template-repo  .tool-versions  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.MD  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-please-config.json  tsconfig.json
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/workflows/: adr-lint.yml  ci.yml  codeql.yml  commit-lint.yml  coverage.yml  docker.yml  pr-title.yml  release.yml
docs/: README.md
docs/adrs/: 0001-polyglot-monorepo-layout.md  0002-conventional-commits-and-semver.md  0003-trunk-based-tags-as-deploy-targets.md  0004-shared-logging-json-schema.md  0005-parameterized-helm-chart-base.md  0006-local-package-registry-workflow.md  0007-package-naming-convention.md  0008-log-event-trace-id-and-context-shape.md  README.md  template.md
docs/runbooks/: README.md  template.md
examples/python-logging-quickstart/: README.md  main.py  pyproject.toml
examples/rust-logging-quickstart/: Cargo.toml  README.md  main.rs
examples/ts-logging-quickstart/: README.md  main.ts  package.json  tsconfig.json
schemas/: log-event.schema.json
scripts/: README.md  adr-lint.py
