[workspace]
resolver = "2"
members = [
    "packages/rust/stoopid-logging",
    "examples/rust-logging-quickstart",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/stoopidJSON/stoopid-commons"
authors = ["Stoopid Company"]

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
