[project]
name = "python-logging-quickstart"
version = "0.0.0"
description = "Quickstart example for the stoopid-logging Python package."
requires-python = ">=3.12"
dependencies = ["stoopid-logging"]

[tool.uv.sources]
stoopid-logging = { workspace = true }

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_logging_quickstart"]
